scripts/nullaway/wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8.txt
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:152: error: [NullAway] dereferenced expression this.getKey() is @Nullable
        this.setOctaves(this.getKey().getOctaves());
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:223: error: [NullAway] dereferenced expression this.getOctaves() is @Nullable
        for (i = 0; i < this.getOctaves().length; i++) {
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:99: error: [NullAway] dereferenced expression this.scaleGene is @Nullable
        this.scaleGene.initialise(this.keyGene);
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:149: error: [NullAway] dereferenced expression this.scaleGene is @Nullable
        this.scaleGene.initialise(this.keyGene);
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:327: error: [NullAway] dereferenced expression dynamicGene is @Nullable
        System.out.println("Chromosome's Dynamic Range:   " + Arrays.toString(dynamicGene.getVelocityRange()));
                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:338: error: [NullAway] dereferenced expression dynamicGene is @Nullable
        System.out.println("Chromosome's Dynamic Range:   " + Arrays.toString(dynamicGene.getVelocityRange()));
                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Phrase.java:39: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.theShape = ds;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Phrase.java:40: error: [NullAway] dereferenced expression s is @Nullable
        this.availableMidiNoteValues = s.getScaleInRange(min, max);
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Phrase.java:41: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.availableMidiVelocityValues = d.getVelocityRange();
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Phrase.java:41: error: [NullAway] dereferenced expression d is @Nullable
        this.availableMidiVelocityValues = d.getVelocityRange();
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Phrase.java:42: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.rhythm = arr;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Phrase.java:66: error: [NullAway] dereferenced expression r.getRhythmicValues() is @Nullable
            l += r.getRhythmicValues().length;
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Phrase.java:75: error: [NullAway] dereferenced expression temp is @Nullable
            for (int j = 0; j < temp.length; j++) {
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/FuzzySystem.java:345: error: [NullAway] dereferenced expression theKey.getRelativeMinor() is @Nullable
        int[] minorRoots_majorSixths = theKey.getRelativeMinor().getOctaves();
                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:55: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.targetFeel = t.getTargetFeel();
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:105: error: [NullAway] enhanced-for expression relatedKeys is @Nullable
        for (Key k : relatedKeys) {
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:109: error: [NullAway] enhanced-for expression k.getChord().getScales() is @Nullable
                for (Scale s : k.getChord().getScales()) {
                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:109: error: [NullAway] dereferenced expression k.getChord() is @Nullable
                for (Scale s : k.getChord().getScales()) {
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:325: error: [NullAway] dereferenced expression k is @Nullable
            c.setKeyGene(k[randK]);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:329: error: [NullAway] dereferenced expression s is @Nullable
            c.setScaleGene(s[randS]);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:333: error: [NullAway] dereferenced expression d is @Nullable
            c.setDynamicGene(d[randD]);
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:337: error: [NullAway] dereferenced expression ds is @Nullable
            c.setDshapeGene((ds[randDS]));
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:343: error: [NullAway] dereferenced expression rb is @Nullable
            Rhythmic_Block temp = rb[randR];
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/networking/OSCClient.java:52: error: [NullAway] initializer method does not guarantee @NonNull fields oscP5 (line 26), myRemoteLocation (line 28), noteValues (line 34), velocityValues (line 36), millisValues (line 38), theFuzzySystem (line 42), theGeneticAlgorithm (line 44), response (line 46) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public OSCClient() {
           ^
    (see http://t.uber.com/nullaway )
../wpi/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/networking/OSCClient.java:149: error: [NullAway] dereferenced expression c.getPhrase() is @Nullable
                response = c.getPhrase().toString();
                                        ^
    (see http://t.uber.com/nullaway )
25 errors
